# diplom-back

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  postgres.yaml
migrations/2024-05-19-102000_services_categories/: up.sql
migrations/2024-05-19-102005_services/: up.sql
migrations/2024-05-19-130421_products/: up.sql
migrations/2024-05-19-130443_attr/: down.sql  up.sql
migrations/2024-05-19-130448_attr_value/: up.sql
migrations/2024-06-08-122314_services_categories/: down.sql  up.sql
migrations/2024-06-08-122326_users/: up.sql
migrations/2024-06-08-122334_products_categories/: down.sql  up.sql
migrations/2024-06-08-122338_products/: up.sql
migrations/2024-06-08-122342_attr/: down.sql
migrations/2024-06-08-122349_attr_value/: down.sql
src/: main.rs
src/api/: api.rs  auth_api.rs  mod.rs  products.rs  products_categories.rs  services.rs  services_categories.rs  users.rs
src/models/: attr.rs  attr_value.rs  mod.rs  products.rs  products_categories.rs  services.rs  services_categories.rs  users.rs
src/repository/: database.rs  mod.rs  products.rs  products_categories.rs  schema.rs  services.rs  services_categories.rs  users.rs
