[package]
name = "diplom-backv2"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
derive_more = "0.99.17"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4.35", features = ["serde"] }
dotenv = "0.15.0"

actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
serde_json = "1.0.117"
thiserror = "1.0.61"
actix-multipart = "0.6.2"
mime = "0.3.17"
tokio = "1.38.0"
image = "0.25.1"
futures-util = "0.3.30"
actix-files = "0.6.6"
